--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ main {
     height: 500px;
     background-color: var(--main-color);
     border-radius: 1rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .inner-box {
     position: absolute;
